--- a/1_FORMULARIOS/4_atividade/index.html
+++ b/1_FORMULARIOS/4_atividade/index.html
@@ -27,7 +27,7 @@
 
         <div>
             <label for="numero">Numero</label>
-            <input type="number" id="numero" placeholder="Número de contato" required>
+            <input type="number" id="numero" placeholder="Número escolhido pelo senhor(a)" required>
         </div>
 
         <!-- input radio -->
@@ -54,8 +54,8 @@
             <label for="musica">Qual o nome da mais recente música do artista Brocasito</label>
             <select name="musica" id="musica">
                 <option disabled selected>Selecione.</option>
-                <option value="pimp talk">pimp talk</option>
-                <option value="passarinhos">passarinhos</option>
+                <option value="pimp talk">Pimp Talk</option>
+                <option value="passarinhos">Passarinhos</option>
             </select>
         </div>
 
