margin box model

--- a/4_BOX_MODEL/2_padding_margin/index.html
+++ b/4_BOX_MODEL/2_padding_margin/index.html
@@ -9,9 +9,16 @@
 </head>
 <body>
     <h1>Padding e Margin</h1>
-    
-    <div>
-        thorfin.
+
+    <div class="yuta">
+        Yuta.
+    </div>
+    <div class="gojo">
+        Satoro Gojo.
+    </div>
+
+    <div class="sukuna">
+        Sukuna.
     </div>
 </body>
 </html>
